<resources>
    <string name="app_name">DEU Yemek</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ara">Ara</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="info">Hakkında</string>
    <string name="share">Paylaş</string>
    <string name="bt_to_list">Menuleri Listele</string>

    <string name="title_activity_saved_menus">Kayıtlı Menüler</string>

    <string-array name="drawer_titles">
        <item>Günün Menüsü</item>
        <item>Menü Listesi</item>
        <item>Bakiye Kontrol</item>
        <item>OGEB</item>
        <item>Kayıtlı Menüler</item>
    </string-array>
    <string name="save_contains_error">Bu menü zaten kayıtlı..</string>
    <string name="save_contains_success">Menu kaydedildi artık internet olmadanda görüntüleyebilirsiniz.</string>
    <string name="no_saved_message">Kayıtlı bir menü bulunmamaktadır.</string>
    <string name="ogeb_title">DEU Geribildirim (OGEB)</string>
    <string name="cancel">İptal</string>
    <string name="send">Gönder</string>
    <string name="deu_card_login_title">DEU Akıllı Kart Girişi</string>
    <string name="title_activity_akilli_kart">Akıllı Kart</string>
    <string name="login">Giriş Yap</string>
    <string name="scorptech">ScorpTech</string>
    <string name="application">DEU Yemek</string>
    <string name="info_message">Uygulama ile ilgili görüş ve önerilerinizi \n scorptechdev@gmail.com \n adresinden bize ulaştırabilirsiniz. Eğer uygulamada sizinde bir payınız olsun istiyorsanız 350x200 piksel boyutundaki fotoğrafları tekrar yukarıdaki mail adresinden bize ulaştırabilirsiniz.</string>
    <string-array name="deu_feedback_durumlar">
        <item>Seçiniz..</item>
        <item>Akademisyen</item>
        <item>İdari personel</item>
        <item>Öğrenci</item>
        <item>Diğer</item>
    </string-array>
    <string-array name="deu_feedback_notification_type">
        <item>Seçiniz..</item>
        <item>Memnuniyet</item>
        <item>Eleştiri</item>
        <item>Öneri</item>
    </string-array>
    <string name="title_activity_main">DEU Yemek</string>
    <string name="notifications_button_text">Duyurular</string>
    <string name="akilli_kart_okulno_hint">Okul Numaranız</string>
    <string name="akilli_kart_schoolno_hint">Okul Numaranız</string>
    <string name="akilli_kart_login_title">Akıllı Kart Giriş</string>
    <string name="akilli_kart_login_password_hint">Şifre</string>
    <string name="akilli_kart_login_button">Giriş Yap</string>
    <string name="remember_me_text">Beni Hatırla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akilli_kart_button">Bakiye Sorgula</string>
    <string name="notification_type_subtitle">Bildirim Türü</string>
    <string name="deu_feedback_status_subtitle">Durumunuz</string>
    <string name="deu_feedback_name_hint">Adınız</string>
    <string name="deu_feedback_surname_hint">Soyadınız</string>
    <string name="deu_feedback_email_hint">Email</string>
    <string name="deu_feedback_subject_hint">Konu</string>
    <string name="deu_feedback_body_hint">Mesajınız</string>
    <string name="deu_feedback_submit_button">Gönder</string>
</resources>
