<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/akilli_kart_login_bg"
    android:orientation="vertical">

    <com.deu.talha.deuyemek.utils.CanaroTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/akilli_kart_login_title"
        android:textColor="#fafafa"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/errorMessage"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="#ea2323"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#fafafa" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/akilli_kart_schoolno_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fafafa"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/akilli_kart_login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fafafa"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me_text"
            android:textColor="#fafafa"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/notifications_button_bg"
            android:minHeight="30dp"
            android:text="@string/akilli_kart_login_button"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>