<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/akilli_kart_login_bg"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.deu.talha.deuyemek.utils.CanaroTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/ogeb_title"
                android:textColor="#fafafa"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="#ea2323"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#fafafa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_type_subtitle"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnNotificationType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/textColorPrimary"
                        android:entries="@array/deu_feedback_notification_type"
                        android:padding="5dp" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deu_feedback_status_subtitle"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="18sp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/textColorPrimary"
                        android:entries="@array/deu_feedback_durumlar"
                        android:padding="5dp" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deu_feedback_name_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fafafa"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deu_feedback_surname_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fafafa"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deu_feedback_email_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fafafa"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deu_feedback_subject_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="#fff"
                        android:textColorHint="#fafafa"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/etBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/deu_feedback_body_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:gravity="top|left"
                        android:minHeight="50dp"
                        android:textColor="#fff"
                        android:textColorHint="#fafafa"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/notifications_button_bg"
                    android:minHeight="30dp"
                    android:text="@string/deu_feedback_submit_button"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>